# django_internship

./: README.md  pyproject.toml  requirements.txt
internship/cities/: admin.py  database.py  forms.py  middleware.py  models.py  urls.py  views.py
internship/cities/migrations/: 0001_initial.py
internship/cities/templatetags/: user_filters.py
internship/internship/: settings.py  urls.py
internship/templates/: base.html  city_detail.html  city_list.html  country_list.html  index.html  new.html  new_country.html
internship/templates/includes/: footer.html  nav.html  paginator.html
internship/templates/users/: logged_out.html  login.html  signup.html
internship/tests/: urls.py  views.py
internship/users/: views.py
