[tool.poetry]
name = "django_internship"
version = "0.1.0"
description = ""
authors = ["Denis <denis.kr.pr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.11"
psycopg2 = "^2.9.3"
Pillow = "^9.0.0"
sorl-thumbnail = "^12.7.0"
sqlparse = "^0.4.2"
pytils = "^0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
